# digital-courtroom

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_audit.py
audit/: final_report.md
audits/langsmith_logs/: evidence_9e021268-f900-45a5-bec2-482750b44c3f.json  evidence_de747ef0-ccd9-497d-913f-d91e97141ccc.json  evidence_summary.json  execution_metadata.json
audits/report_onself_generated/: audit_report.md
reports/: intrem-report.docx  ~WRL0003.tmp
src/: __init__.py  graph.py  state.py
src/config/: prompts.py
src/nodes/: detectives.py  judge.py  judges.py  justice.py
src/tools/: ast_tools.py  doc_tools.py  git_tools.py  repo_tools.py  vision_tools.py
src/utils/: context_builder.py  parser.py
