[project]
name = "automaton-auditor"
version = "1.0.0"
description = "Deep LangGraph Swarm for Autonomous Governance"
authors = [{name = "mikias"}]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langsmith>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "astroid>=3.0.0",
    "docling>=1.0.0",
    "gitingest>=0.1.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",
    "pdf2image>=1.16.0",
    "opencv-python>=4.8.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["automaton-auditor*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true