[project]
name = "automated-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "astor>=0.8.1,<0.9.0",
    "asyncio>=3.4.3,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "click>=8.1.0,<9.0.0",
    "colorama>=0.4.6,<0.5.0",
    "docling>=0.1.0,<0.2.0",
    "gitpython>=3.1.0,<4.0.0",
    "groq>=0.4.0,<0.5.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-community>=0.0.10,<0.1.0",
    "langchain-core>=0.1.0,<0.2.0",
    "langgraph>=0.0.20,<0.1.0",
    "langsmith>=0.0.50,<0.1.0",
    "mypy>=1.0.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pdfplumber>=0.10.0,<0.11.0",
    "pillow>=10.0.0,<11.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "pypdf2>=3.0.0,<4.0.0",
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31.0,<3.0.0",
    "rich>=13.0.0,<14.0.0",
    "ruff>=0.1.0,<0.2.0",
    "tqdm>=4.66.0,<5.0.0",
    "tree-sitter>=0.20.0,<0.21.0",
    "tree-sitter-languages>=1.5.0",
    "typing-extensions>=4.8.0,<5.0.0",
]
